--- a/MvcMovie/Views/HelloWorld/Index.cshtml
+++ b/MvcMovie/Views/HelloWorld/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Movie List";
 }
 
-<h2>Index</h2>
-<p>Hello from View Template</p>
+<h2>My Movie List</h2>
+<ul>
+    @for (int i = 0; i < (int)ViewData["NumTimes"]; i++)
+    {
+        <li>@ViewData["Message"]</li>
+    }
+</ul>
